@@ -11,6 +11,7 @@ V.Next
 - [MINOR] Updated target, compile sdk, AGP and gradle versions  (#2142)
 - [MINOR] Add new apk name to BrokerHost infra (#2152)
 - [MINOR] Send key to request broker data in all BrokerOperationBundle (#2159)
+- [MINOR] Catch strongbox exception on Android 14 (#2158)
 
 V.15.0.0
 ----------
